--- a/lakefile.toml
+++ b/lakefile.toml
@@ -1,7 +1,7 @@
-name = "new_project"
+name = "Bachelor_Project_StefanLica"
 version = "0.1.0"
 keywords = ["math"]
-defaultTargets = ["NewProject"]
+defaultTargets = ["Bachelor_Project_StefanLica"]
 
 [leanOptions]
 pp.unicode.fun = true # pretty-prints `fun a ↦ b`
@@ -12,4 +12,4 @@ name = "mathlib"
 scope = "leanprover-community"
 
 [[lean_lib]]
-name = "NewProject"
+name = "Bachelor_Project_StefanLica"
