--- a/.github/workflows/lean_action_ci.yml
+++ b/.github/workflows/lean_action_ci.yml
@@ -1,4 +1,4 @@
-name: Lean Action CI
+name: Lean CI + Docs Deployment
 
 on:
   push:
@@ -10,5 +10,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: leanprover/lean-action@v1
+    - name: 📥 Checkout repository
+      uses: actions/checkout@v4
+
+    - name: 🧰 Install Lean & Elan
+      uses: leanprover/lean-action@v1
+
+    - name: 🛠 Install dependencies
+      run: |
+        lake update doc-gen4
+        lake build Bachelor_Project_StefanLica:docs
+
+    - name: 🚚 Copy generated docs to /docs folder
+      run: |
+        rm -rf docs
+        mkdir -p docs
+        cp -r docbuild/.lake/build/doc/* docs/
+
+    - name: ✅ Commit and push updated docs
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add docs
+        git commit -m "Auto-update Lean docs" || echo "Nothing to commit"
+        git push
+
