--- a/.github/workflows/lean_action_ci.yml
+++ b/.github/workflows/lean_action_ci.yml
@@ -19,6 +19,7 @@ jobs:
     - name: 🛠 Install dependencies and build docs
       run: |
         cd docbuild
+        export MATHLIB_NO_CACHE_ON_UPDATE=1
         lake update doc-gen4
         lake build Bachelor_Project_StefanLica:docs
 
