--- a/.github/workflows/lean_action_ci.yml
+++ b/.github/workflows/lean_action_ci.yml
@@ -8,21 +8,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DOCGEN_SKIP: "Lean Init Lake Std Mathlib"
 
     steps:
     - name: 📥 Checkout repository
       uses: actions/checkout@v4
-
-    - name: 💾 Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.elan
-          docbuild/.lake
-          docbuild/lake-packages
-        key: ${{ runner.os }}-lean-${{ hashFiles('docbuild/lakefile.toml') }}
-        restore-keys: |
-          ${{ runner.os }}-lean-
 
     - name: 🧰 Install Lean & Elan
       uses: leanprover/lean-action@v1
@@ -31,14 +22,15 @@ jobs:
       run: |
         cd docbuild
         export MATHLIB_NO_CACHE_ON_UPDATE=1
-        lake update
+        lake update doc-gen4
+        export MATHLIB_NO_BUILD=1
         lake build Bachelor_Project_StefanLica:docs
 
     - name: 🚚 Copy generated docs to /docs folder
       run: |
         rm -rf docs
         mkdir -p docs
-        cp -r docbuild/.lake/build/doc/. docs/
+        cp -r docbuild/.lake/build/doc/* docs/
 
     - name: ✅ Commit and push updated docs
       run: |
